--- a/package.json
+++ b/package.json
@@ -1,31 +1,47 @@
 {
-  "name": "@well-known-components/base-component",
+  "name": "@dcl/block-indexer",
   "version": "1.0.0",
-  "description": "base component",
+  "description": "On Chain block indexer",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "build:watch": "tsc -p tsconfig.json --watch",
+    "test": "jest --detectOpenHandles --colors --runInBand --coverage "
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/well-known-components/base-component.git"
+    "url": "git+https://github.com/decentraland/block-indexer.git"
   },
   "keywords": [],
   "author": "",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/well-known-components/base-component/issues"
+    "url": "https://github.com/decentraland/block-indexer/issues"
   },
   "prettier": {
     "printWidth": 120,
     "semi": false
   },
   "homepage": "https://github.com/well-known-components/base-component#readme",
+  "dependencies": {
+    "lru-cache": "^7.14.0"
+  },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.17.0",
-    "@types/jest": "^28.1.0",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.4",
-    "typescript": "^4.7.3"
+    "@dcl/eslint-config": "^1.0.6",
+    "@types/jest": "^29.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.0.3",
+    "prettier": "^2.7.1",
+    "sinon": "^14.0.0",
+    "ts-jest": "^29.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "files": [
     "dist"
