--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@dcl/eslint-config": "^1.0.6",
     "@microsoft/api-extractor": "^7.33.4",
     "@types/jest": "^29.0.3",
+    "@types/node": "^16.18.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
