--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "homepage": "https://github.com/decentraland/block-indexer#readme",
   "dependencies": {
+    "@well-known-components/interfaces": "^1.1.3",
+    "@well-known-components/logger": "^3.0.0",
+    "@well-known-components/metrics": "^2.0.1",
     "lru-cache": "^7.14.0"
   },
   "devDependencies": {
@@ -39,6 +42,7 @@
     "@types/node": "^16.18.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "@well-known-components/http-server": "^1.1.6",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
