--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "prettier": {
     "printWidth": 120,
-    "semi": false
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 2
   },
   "homepage": "https://github.com/decentraland/block-indexer#readme",
   "dependencies": {
@@ -40,14 +43,8 @@
     "@microsoft/api-extractor": "^7.33.4",
     "@types/jest": "^29.0.3",
     "@types/node": "^16.18.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
     "@well-known-components/http-server": "^1.1.6",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.0.3",
-    "prettier": "^2.7.1",
     "sinon": "^14.0.0",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
