--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,13 @@ jobs:
         with:
           node-version: 16.x
       - name: install
-        run:  npm install
+        run: yarn install --frozen-lockfile
       - name: build
-        run:  make build
+        run:  yarn build
       - name: test
-        run:  make test
+        run:  yarn test
       - name: lint
-        run: npm run lint:check
+        run: yarn lint:check
       - name: Publish
         uses: menduz/oddish-action@master
         with:
