--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -77,7 +77,7 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             # Test this pull request
-            - The `@dcl/block-indexer` package can be tested in scenes by running
+            - The `@dcl/block-indexer` package can be tested by running
                ```bash
                yarn upgrade "${{ steps.url-generator.outputs.body }}"
                ```
