--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "api-extractor": "yarn clean-api-extractor && api-extractor run --local --verbose --diagnostics --typescript-compiler-folder ./node_modules/typescript",
-    "api-extractor-ci": "yarn clean-api-extractor && api-extractor run --typescript-compiler-folder ./node_modules/typescript",
-    "clean-api-extractor": "rm -rf node_modules/@microsoft/api-extractor/node_modules/typescript || true",
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
     "lint:check": "eslint '**/*.{js,ts}'",
     "lint:fix": "eslint '**/*.{js,ts}' --fix",
-    "test": "jest --detectOpenHandles --colors --runInBand --coverage "
+    "test": "jest --detectOpenHandles --colors --runInBand --coverage"
   },
   "repository": {
     "type": "git",
@@ -39,15 +36,10 @@
     "lru-cache": "^7.14.0"
   },
   "devDependencies": {
-    "@dcl/eslint-config": "^1.0.6",
-    "@microsoft/api-extractor": "^7.33.4",
-    "@types/jest": "^29.0.3",
+    "@dcl/eslint-config": "^1.1.6",
     "@types/node": "^18.11.18",
     "@well-known-components/http-server": "^1.1.6",
-    "jest": "^29.0.3",
-    "sinon": "^15.0.1",
-    "ts-jest": "^29.0.1",
-    "ts-node": "^10.9.1",
+    "@well-known-components/test-helpers": "^1.5.2",
     "typescript": "^4.8.4"
   },
   "files": [
